--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "clean": "rm -rf ./target/*",
         "build": "yarn clean && tsc",
-        "start": "ts-node src/server.ts"
+        "start": "yarn build && node target/server.js",
+        "format": "prettier --config .prettierrc.json 'src/**/*.ts' --write"
     },
     "dependencies": {
         "axios": "^0.26.1",
@@ -33,7 +34,8 @@
         "redis": "^4.1.0",
         "redis-om": "^0.3.3",
         "sequelize": "^6.19.0",
-        "sequelize-typescript": "^2.1.3"
+        "sequelize-typescript": "^2.1.3",
+        "socket.io": "^4.5.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
@@ -46,6 +48,7 @@
         "@types/node": "^17.0.25",
         "@types/sequelize": "^4.28.11",
         "@types/validator": "^13.7.2",
+        "prettier": "2.6.2",
         "reflect-metadata": "^0.1.13",
         "routing-controllers": "^0.9.0",
         "ts-node": "^10.7.0",
