--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "body-parser": "^1.20.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
+        "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "file-type": "^17.1.1",
@@ -27,6 +29,7 @@
         "http-status-codes": "^2.2.0",
         "js-model-mapper": "^1.0.0",
         "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.10.0",
         "ms": "^2.1.3",
         "multer": "^1.4.4",
         "mysql2": "^2.3.3",
@@ -40,9 +43,12 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/body-parser": "^1.19.2",
+        "@types/compression": "^1.7.2",
         "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jsonwebtoken": "^8.5.8",
+        "@types/morgan": "^1.9.3",
         "@types/ms": "^0.7.31",
         "@types/multer": "^1.4.7",
         "@types/node": "^17.0.25",
