--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
-        "class-transformer": "^0.5.1",
-        "class-validator": "^0.13.2",
+        "class-validator": "^0.12.2",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
@@ -38,7 +37,10 @@
         "redis-om": "^0.3.3",
         "sequelize": "^6.19.0",
         "sequelize-typescript": "^2.1.3",
-        "socket.io": "^4.5.0"
+        "socket.io": "^4.5.0",
+        "reflect-metadata": "^0.1.13",
+        "routing-controllers": "^0.9.0",
+        "typedi": "^0.10.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
@@ -55,11 +57,8 @@
         "@types/sequelize": "^4.28.11",
         "@types/validator": "^13.7.2",
         "prettier": "2.6.2",
-        "reflect-metadata": "^0.1.13",
-        "routing-controllers": "^0.9.0",
         "ts-node": "^10.7.0",
         "tslib": "^2.4.0",
-        "typedi": "^0.10.0",
         "typescript": "^4.6.3"
     }
 }
