--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
+        "class-transformer": "^0.5.1",
         "class-validator": "^0.12.2",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
@@ -35,14 +36,15 @@
         "nodemailer": "^6.7.3",
         "redis": "^4.1.0",
         "redis-om": "^0.3.3",
+        "reflect-metadata": "^0.1.13",
+        "routing-controllers": "^0.9.0",
         "sequelize": "^6.19.0",
         "sequelize-typescript": "^2.1.3",
         "socket.io": "^4.5.0",
-        "reflect-metadata": "^0.1.13",
-        "routing-controllers": "^0.9.0",
         "typedi": "^0.10.0"
     },
     "devDependencies": {
+        "@faker-js/faker": "^6.3.1",
         "@types/bcrypt": "^5.0.0",
         "@types/body-parser": "^1.19.2",
         "@types/compression": "^1.7.2",
