--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "sequelize": "^6.19.0",
         "sequelize-typescript": "^2.1.3",
         "socket.io": "^4.5.0",
-        "typedi": "^0.10.0"
+        "typedi": "^0.10.0",
+        "unique-names-generator": "^4.7.1"
     },
     "devDependencies": {
         "@faker-js/faker": "^6.3.1",
