--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "sequelize-typescript": "^2.1.3",
         "socket.io": "^4.5.0",
         "typedi": "^0.10.0",
-        "unique-names-generator": "^4.7.1"
+        "unique-names-generator": "^4.7.1",
+        "winston": "^3.7.2"
     },
     "devDependencies": {
         "@faker-js/faker": "^6.3.1",
