--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "ms": "^2.1.3",
         "multer": "^1.4.4",
         "mysql2": "^2.3.3",
+        "nanoid": "^3.3.4",
         "nodemailer": "^6.7.3",
         "redis": "^4.1.0",
         "redis-om": "^0.3.3",
