--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "format": "prettier --config .prettierrc.json 'src/**/*.ts' --write"
     },
     "dependencies": {
-        "axios": "^0.26.1",
+        "axios": "latest",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
         "class-transformer": "^0.3.1",
@@ -23,15 +23,14 @@
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
-        "express": "^4.17.3",
+        "express": "latest",
         "file-type": "^17.1.1",
         "form-data": "^4.0.0",
         "http-status-codes": "^2.2.0",
-        "js-model-mapper": "^1.0.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "ms": "^2.1.3",
-        "multer": "^1.4.4",
+        "multer": "latest",
         "mysql2": "^2.3.3",
         "nanoid": "^3.3.4",
         "nodemailer": "^6.7.3",
@@ -39,9 +38,9 @@
         "redis-om": "^0.3.3",
         "reflect-metadata": "^0.1.13",
         "routing-controllers": "^0.9.0",
-        "sequelize": "^6.19.0",
+        "sequelize": "latest",
         "sequelize-typescript": "^2.1.3",
-        "socket.io": "^4.5.0",
+        "socket.io": "latest",
         "typedi": "^0.10.0",
         "unique-names-generator": "^4.7.1",
         "winston": "^3.7.2"
@@ -53,7 +52,7 @@
         "@types/compression": "^1.7.2",
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
-        "@types/express": "^4.17.13",
+        "@types/express": "latest",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/morgan": "^1.9.3",
         "@types/ms": "^0.7.31",
@@ -65,5 +64,6 @@
         "ts-node": "^10.7.0",
         "tslib": "^2.4.0",
         "typescript": "^4.6.3"
-    }
+    },
+    "packageManager": "yarn@3.2.1"
 }
