--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "clean": "rm -rf ./target/*",
         "build": "yarn clean && tsc",
-        "start": "yarn build && node --trace-warnings target/server.js",
+        "start": "yarn build && yarn pm2-dev --node-args --trace-warnings target/server.js",
         "format": "prettier --config .prettierrc.json 'src/**/*.ts' --write"
     },
     "dependencies": {
@@ -24,16 +24,13 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "latest",
-        "file-type": "^17.1.1",
         "form-data": "^4.0.0",
         "http-status-codes": "^2.2.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "ms": "^2.1.3",
-        "multer": "latest",
         "mysql2": "^2.3.3",
         "nanoid": "^3.3.4",
-        "nodemailer": "^6.7.3",
         "redis": "^4.1.0",
         "redis-om": "^0.3.3",
         "reflect-metadata": "^0.1.13",
@@ -57,10 +54,10 @@
         "@types/jsonwebtoken": "^8.5.8",
         "@types/morgan": "^1.9.3",
         "@types/ms": "^0.7.31",
-        "@types/multer": "^1.4.7",
         "@types/node": "^17.0.25",
         "@types/sequelize": "^4.28.11",
         "@types/validator": "^13.7.2",
+        "pm2": "^5.2.0",
         "prettier": "2.6.2",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3"
