--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
         "eslint-plugin-import": "^2.25.2",
         "pm2": "^5.2.0",
         "prettier": "2.6.2",
-        "typescript": "^4.6.3"
+        "typescript": "latest"
     },
     "packageManager": "yarn@3.2.1"
 }
