--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@socket.io/admin-ui": "^0.3.0",
+        "@socket.io/redis-adapter": "^7.2.0",
         "axios": "latest",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
